--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -4,19 +4,21 @@ AS=@AS@
 AR=@AR@
 MAKE_SO=@MAKE_SO@
 
+CFLAGS=@CFLAGS@
+
 OMNETPP_ROOT=@OMNETPP_ROOT@
 OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
 OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
 OMNETPP_INCLUDES=@OMNETPP_INCLUDES@
-LIB_SUFFIX=so
+LIB_SUFFIX=@LIB_SUFFIX@
 
 # Local definitions
-ENVIR_INCLUDES=../args.h ../cinifile.h ../omnetapp.h ../slaveapp.h
+ENVIR_INCLUDES=../envir/args.h ../envir/cinifile.h ../envir/omnetapp.h ../envir/slaveapp.h
 CMDENV_INCLUDES=cmdenv.h enumstr.h
-INCL_PATH=-I..
+INCL_PATH=-I../envir
 
 INCLUDES=$(OMNETPP_INCLUDES) $(ENVIR_INCLUDES) $(CMDENV_INCLUDES)
-CC_OPTS=$(OMNETPP_INCL_PATH) $(INCL_PATH)
+COPTS=$(CLFAGS) $(OMNETPP_INCL_PATH) $(INCL_PATH)
 
 OBJS = cmdenv.o enumstr.o heap.o
 
@@ -29,11 +31,11 @@ libcmdenv.so : $(OBJS)
 	$(MAKE_SO) libcmdenv.so $(OBJS)
 
 cmdenv.o : cmdenv.cc $(INCLUDES)
-	$(CXX) $(CC_OPTS) cmdenv.cc
+	$(CXX) -c $(COPTS) cmdenv.cc
 
-enumstr.o : enumstr.cc enumstr.h $(INCLUDES)
-	$(CXX) $(CC_OPTS) enumstr.cc
+enumstr.o : enumstr.cc $(INCLUDES)
+	$(CXX) -c $(COPTS) enumstr.cc
 
 heap.o : heap.cc $(INCLUDES)
-	$(CXX) $(CC_OPTS) heap.cc
+	$(CXX) -c $(COPTS) heap.cc
 
