--- a/samples/hcube/Makefile.in
+++ b/samples/hcube/Makefile.in
@@ -77,34 +77,34 @@ $(TARGET): $(OBJS) $(EXRA_OBJS) makefile
 	$(LD) $(OBJS) $(EXRA_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
 
 gensink_n.o: gensink.h gensink_n.cc $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gensink_n.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gensink_n.cc
 
 gensink_n.cc: gensink.ned
 	$(NEDC) $(INCLUDE_PATH) gensink.ned
 
 hc_net_n.o: hc_net_n.cc $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_net_n.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_net_n.cc
 
 hc_net_n.cc: hc_net.ned
 	$(NEDC) $(INCLUDE_PATH) hc_net.ned
 
 hc_rte_n.o: hc_rte.h hc_rte_n.cc $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_rte_n.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_rte_n.cc
 
 hc_rte_n.cc: hc_rte.ned
 	$(NEDC) $(INCLUDE_PATH) hc_rte.ned
 
 hcube_n.o: hcube_n.cc $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hcube_n.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hcube_n.cc
 
 hcube_n.cc: hcube.ned
 	$(NEDC) $(INCLUDE_PATH) hcube.ned
 
 gensink.o: gensink.cc gensink.h hc_rte.h $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gensink.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gensink.cc
 
 hc_rte.o: hc_rte.cc gensink.h hc_rte.h $(OMNETPP_INCLUDES)
-	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_rte.cc
+	$(CXX) -c $(COPTS) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) hc_rte.cc
 
 clean:
 	rm -f *.o *_n.cc $(TARGET)
