--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -1,14 +1,7 @@
 #
-# Standalone executable support: you can have Tkenv's TCL script parts
-# be compiled into the executable. Enable doing so, uncomment the
-# TKAPP=tkapp-rt line below. Otherwise, uncomment TKAPP=tkapp.
-#
-TKAPP=tkapp
-# TKAPP=tkapp-rt
-
 # Definitions to be customized by 'configure'
+#
 CXX=@CXX@
-AS=@AS@
 AR=@AR@
 MAKE_SO=@MAKE_SO@
 
@@ -17,25 +10,33 @@ CFLAGS=@CFLAGS@
 OMNETPP_ROOT=@OMNETPP_ROOT@
 OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
 OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
-OMNETPP_INCLUDES=@OMNETPP_INCLUDES@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 
 TK_INCL_PATH=@TK_INCL_PATH@
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
+#
 # Local definitions
-ENVIR_INCLUDES=../envir/args.h ../envir/cinifile.h ../envir/omnetapp.h ../envir/slaveapp.h
-TKENV_INCLUDES=tkapp.h tkinsp.h tklib.h arrow.h
-INCL_PATH=-I../envir
+#
+ENVIR_INCL_PATH=-I../envir
 
-INCLUDES=$(OMNETPP_INCLUDES) $(ENVIR_INCLUDES) $(TKENV_INCLUDES)
-COPTS=-fwritable-strings $(CFLAGS) $(OMNETPP_INCL_PATH) $(INCL_PATH) $(TK_INCL_PATH)
+COPTS=-fwritable-strings $(CFLAGS) $(OMNETPP_INCL_PATH) $(ENVIR_INCL_PATH) $(TK_INCL_PATH)
 
 OMNETPP_TKENV_DIR=$(OMNETPP_SRC_DIR)/tkenv
 
 OBJS = $(TKAPP).o tkcmd.o tklib.o objinsp.o modinsp.o statinsp.o inspect.o arrow.o
 
+# Standalone executable support: you can have Tkenv's TCL script parts
+# be compiled into the executable. Enable doing so, uncomment the
+# TKAPP=tkapp-rt line below. Otherwise, uncomment TKAPP=tkapp.
+#
+TKAPP=tkapp
+#TKAPP=tkapp-rt
+
+#
+# Targets
+#
 all : libtkenv.$(LIB_SUFFIX)
 
 libtkenv.a : $(OBJS)
@@ -44,28 +45,28 @@ libtkenv.a : $(OBJS)
 libtkenv.so : $(OBJS)
 	$(MAKE_SO) libtkenv.so $(OBJS)
 
-tkapp.o : tkapp.cc $(INCLUDES)
+tkapp.o : tkapp.cc
 	$(CXX) -c $(COPTS) -DOMNETPP_TKENV_DIR=\"$(OMNETPP_TKENV_DIR)\" -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" tkapp.cc
 
-tkapp-rt.o : tkapp.cc $(INCLUDES) tclcode.cc
+tkapp-rt.o : tkapp.cc  tclcode.cc
 	$(CXX) -c $(COPTS) -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" tkapp.cc -o tkapp-rt.o
 
-tkcmd.o : tkcmd.cc $(INCLUDES)
+tkcmd.o : tkcmd.cc
 	$(CXX) -c $(COPTS) tkcmd.cc
 
-tklib.o : tklib.cc $(INCLUDES)
+tklib.o : tklib.cc
 	$(CXX) -c $(COPTS) tklib.cc
 
-objinsp.o: objinsp.cc $(INCLUDES)
+objinsp.o: objinsp.cc
 	$(CXX) -c $(COPTS) objinsp.cc
 
-modinsp.o: modinsp.cc $(INCLUDES)
+modinsp.o: modinsp.cc
 	$(CXX) -c $(COPTS) modinsp.cc
 
-statinsp.o: statinsp.cc $(INCLUDES)
+statinsp.o: statinsp.cc
 	$(CXX) -c $(COPTS) statinsp.cc
 
-inspect.o: inspect.cc $(INCLUDES)
+inspect.o: inspect.cc
 	$(CXX) -c $(COPTS) inspect.cc
 
 arrow.o: arrow.cc arrow.h
@@ -76,5 +77,14 @@ tclcode.cc: *.tcl tcl2c
 
 tcl2c: tcl2c.c
 	$(CC) tcl2c.c -o tcl2c
+
+depend:
+	makedepend -Y -I. -I../envir -I../sim -- *.cc
+
+clean:
+	rm -f *.o libtkenv.a libtkenv.so tcl2c
+
+
+# DO NOT DELETE THIS LINE -- make depend depends on it.
 
 
